--- a/index.less
+++ b/index.less
@@ -98,6 +98,12 @@ atom-text-editor, :host {
       }
     }
   }
+
+  &[data-grammar*="php"] {
+      .comment {
+          color: #ffcc66;
+      }
+  }
 }
 
 .bracket-matcher .region {
