--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -2,11 +2,11 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: #c5c8c6;
+@syntax-text-color: #ffffcc;
 @syntax-cursor-color: white;
 @syntax-selection-color: #444;
 @syntax-selection-flash-color: #eee;
-@syntax-background-color: #1d1f21;
+@syntax-background-color: #222222;
 
 // Guide colors
 @syntax-wrap-guide-color: rgba(197, 200, 198, .1);
