--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -38,27 +38,33 @@
 @base3: red;
 @base01: #586e75;
 
+
+
 @red: #ff0000;
-@cyan: #66ffff; //#91dfeb;
-@magenta: #d33682;
-@green: #33cc66;
-
-@gray: #999999;
-
-@light_green: #87f479;
 @light_red: #f47979;
+@lightish_red: #ffcccc; //It's not pink, it's LIGHTISH RED!
+
+@orange: #ffcc66;
+
+@yellow: #F7F380;
+@beige: #ffffcc;
+
+@green: #33cc66;
+@light_green: #87f479;
+@mint_green: #66cc99;
+@teal: #00b0bf;
+
 @blue: #0099ff;
 @light_blue: #6699ff;
-@orange: #ffcc66;
-@light_gray: #b8b9b9;
-@lightish_red: #ffcccc; //It's not pink, it's LIGHTISH RED!
+@cyan: #66ffff; //#91dfeb;
+
 @salmon: #ff6666;
+@magenta: #d33682;
 @pink: #ff66b5;
 @pink2: #ff99ff;
-@beige: #ffffcc;
-@mint_green: #66cc99;
-@light_green: #B2DFB6;
-@teal: #00b0bf;
+
+@gray: #999999;
+@light_gray: #b8b9b9;
 
 @bg-color: #222222;
 @gutter-bg: lighten(@bg-color, 2%);
