--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -45,6 +45,7 @@
 @lightish_red: #ffcccc; //It's not pink, it's LIGHTISH RED!
 
 @orange: #ffcc66;
+@gray_orange: #766C58;
 
 @yellow: #F7F380;
 @beige: #ffffcc;
@@ -53,6 +54,7 @@
 @light_green: #87f479;
 @mint_green: #66cc99;
 @teal: #00b0bf;
+@gray_green: #b2dfb6;
 
 @blue: #0099ff;
 @light_blue: #6699ff;
