--- a/index.less
+++ b/index.less
@@ -319,6 +319,33 @@ atom-text-editor, :host {
         color: @gray;
     }
 
+    .round,
+    .begin,
+    .end {
+        color: @blue;
+    }
+
+    .parameter {
+        color: @beige;
+    }
+
+    .string{
+        color: @cyan;
+    }
+
+    .class,
+    .support {
+        color: @purple;
+    }
+
+    .dom {
+        color: @light_blue;
+    }
+
+    .numeric {
+        color: @light_red;
+    }
+
 }
 
 
