--- a/index.less
+++ b/index.less
@@ -1,7 +1,7 @@
 @import 'syntax-variables';
 
 
-atom-text-editor, :host {
+atom-text-editor {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
@@ -47,53 +47,53 @@ atom-text-editor, :host {
 
   // Markdown Styles
 
-  .source.gfm {
+  .syntax--source.syntax--gfm {
     color: #999;
   }
 
-  .gfm {
-    .markup.heading {
+  .syntax--gfm {
+    .syntax--markup.syntax--heading {
       color: #eee;
     }
 
-    .link {
+    .syntax--link {
       color: #555;
     }
 
-    .variable.list,
-    .support.quote {
+    .syntax--variable.syntax--list,
+    .syntax--support.syntax--quote {
       color: #555;
     }
 
-    .link .entity {
+    .syntax--link .syntax--entity {
       color: #ddd;
     }
 
-    .raw {
+    .syntax--raw {
       color: #aaa;
     }
   }
 
-  .markdown {
-    .paragraph {
+  .syntax--markdown {
+    .syntax--paragraph {
       color: #999;
     }
 
-    .heading {
+    .syntax--heading {
       color: #eee;
     }
 
-    .raw {
+    .syntax--raw {
       color: #aaa;
     }
 
-    .link {
+    .syntax--link {
       color: #555;
 
-      .string {
+      .syntax--string {
         color: #555;
 
-        &.title {
+        &.syntax--title {
           color: #ddd;
         }
       }
@@ -101,23 +101,23 @@ atom-text-editor, :host {
   }
 }
 
-.begin,
-.end {
+.syntax--begin,
+.syntax--end {
     color: @salmon;
     font-weight: 700;
 
-    &.definition,
-    &.array {
+    &.syntax--definition,
+    &.syntax--array {
         color: @blue;
         font-weight: normal;
     }
 
-    &.string {
+    &.syntax--string {
         color: @light_red;
         font-weight: normal;
     }
 
-    .source {
+    .syntax--source {
         color: @salmon;
         font-weight: normal;
     }
@@ -129,694 +129,269 @@ atom-text-editor, :host {
   opacity: .7;
 }
 
-.comment {
+.syntax--comment {
   color: #7C7C7C;
 }
 
-.entity {
+.syntax--entity {
   color: #FFD2A7;
 
-  &.name.type {
+  &.syntax--name.syntax--type {
     text-decoration: underline;
     color: #FFFFB6;
   }
 
-  &.other.inherited-class {
+  &.syntax--other.syntax--inherited-class {
     color: #9B5C2E;
   }
 }
 
-.expression {
+.syntax--expression {
     color: @blue;
 }
 
-.function-call {
+.syntax--function-call {
     color: @beige;
 }
 
-.keyword {
+.syntax--keyword {
   color: @green;
 
-  &.control {
+  &.syntax--control {
     color: @green;
   }
 
-  &.operator {
+  &.syntax--operator {
     color: @blue;
   }
 }
 
-.storage {
+.syntax--storage {
   color: @blue;
 
-  &.modifier {
+  &.syntax--modifier {
     color: @green;
   }
 }
 
-.constant {
+.syntax--constant {
   color: @yellow;
 
-  &.numeric {
+  &.syntax--numeric {
     color: @orange;
   }
 
-  &.language {
+  &.syntax--language {
       color: @green;
   }
 }
 
-.variable {
+.syntax--variable {
   color: @cyan;
 }
 
-.invalid.deprecated {
-  text-decoration: underline;
-  color: #FD5FF1;
+.syntax--invalid {
+
+    &.syntax--deprecated {
+        text-decoration: underline;
+        color: #FD5FF1;
+    }
+
+    &.syntax--illegal {
+      color: #FD5FF1;
+      background-color: rgba(86, 45, 86, 0.75);
+    }
 }
 
-.invalid.illegal {
-  color: #FD5FF1;
-  background-color: rgba(86, 45, 86, 0.75);
-}
-
-.parameters {
+.syntax--parameters {
     color: @blue;
 }
 
-.scope {
+.syntax--scope {
     color: @beige;
     //color: @blue;
 }
 
-.source {
+.syntax--source {
     color: @blue;
     color: @beige;
 }
 
 // String interpolation in Ruby, CoffeeScript, and others
-.string {
-  .source,
-  .meta.embedded.line {
+.syntax--string {
+  color: @light_red;
+
+  .syntax--source,
+  .syntax--meta.syntax--embedded.line {
     color: #EDEDED;
     color: @light_red;
   }
 
-  .keyword {
+  .syntax--keyword {
       color: @light_red;
   }
 
   .punctuation.section.embedded {
     //color: #00A0A0;
 
-    .source {
+    .syntax--source {
       //color: #00A0A0;  // Required for the end of embedded strings in Ruby #716
     }
   }
-}
 
-.string {
-  color: @light_red;
-
-  .constant {
+  .syntax--constant {
     color: #00A0A0;
   }
 
-  &.regexp {
+  &.syntax--regexp {
     color: #E9C062;
 
-    .constant.character.escape,
-    .source.ruby.embedded,
-    .string.regexp.arbitrary-repetition {
+    .syntax--constant.syntax--character.syntax--escape,
+    .syntax--source.syntax--ruby.syntax--embedded,
+    .syntax--string.syntax--regexp.syntax--arbitrary-repetition {
       color: #FF8000;
     }
 
-    &.group {
+    &.syntax--group {
       color: #C6A24F;
       background-color: rgba(255, 255, 255, 0.06);
     }
 
-    &.character-class {
+    &.syntax--character-class {
       color: #B18A3D;
     }
   }
 
-  .variable {
+  .syntax--variable {
     color: @salmon;
   }
 
-  &.html {
+  &.syntax--html {
       color: @cyan;
   }
 }
 
-.support {
+.syntax--support {
   color: #FFFFB6;
   color: @blue;
 
-  &.function {
+  &.syntax--function {
     color: @blue;
   }
 
-  &.constant {
+  &.syntax--constant {
     color: #FFD2A7;
   }
 
-  &.type.property-name.css {
+  &.syntax--type.syntax--property-name.syntax--css {
     color: #EDEDED;
   }
 }
 
-.source .entity.name.tag,
-.source .punctuation.tag {
+.syntax--source .syntax--entity.syntax--name.syntax--tag,
+.syntax--source .syntax--punctuation.syntax--tag {
   color: #96CBFE;
 }
-.source .entity.other.attribute-name {
+.syntax--source .syntax--entity.syntax--other.syntax--attribute-name {
   color: #C6C5FE;
 }
 
-.entity {
-  &.other.attribute-name {
+.syntax--entity {
+  &.syntax--other.syntax--attribute-name {
     color: #C6C5FE;
   }
 
-  &.name.tag.namespace,
-  &.other.attribute-name.namespace {
+  &.syntax--name.syntax--tag.syntax--namespace,
+  &.syntax--other.syntax--attribute-name.syntax--namespace {
     color: #E18964;
   }
 }
 
-.meta {
-  &.preprocessor.c {
+.syntax--meta {
+  &.syntax--preprocessor.syntax--c {
     color: #8996A8;
   }
 
-  &.preprocessor.c .keyword {
+  &.syntax--preprocessor.syntax--c .syntax--keyword {
     color: #AFC4DB;
   }
 
-  &.cast {
+  &.syntax--cast {
     color: #676767;
   }
 
-  &.sgml.html .meta.doctype,
-  &.sgml.html .meta.doctype .entity,
-  &.sgml.html .meta.doctype .string,
-  &.xml-processing,
-  &.xml-processing .entity,
-  &.xml-processing .string {
+  &.syntax--sgml.syntax--html .syntax--meta.syntax--doctype,
+  &.syntax--sgml.syntax--html .syntax--meta.syntax--doctype .syntax--entity,
+  &.syntax--sgml.syntax--html .syntax--meta.syntax--doctype .syntax--string,
+  &.syntax--xml-processing,
+  &.syntax--xml-processing .syntax--entity,
+  &.syntax--xml-processing .syntax--string {
     color: #494949;
   }
 
-  &.tag .entity,
-  &.tag > .punctuation,
-  &.tag.inline .entity {
+  &.syntax--tag .syntax--entity,
+  &.syntax--tag > .syntax--punctuation,
+  &.syntax--tag.syntax--inline .syntax--entity {
     color: @gray_green;
   }
-  &.tag .name,
-  &.tag.inline .name,
-  &.tag > .punctuation {
+  &.syntax--tag .syntax--name,
+  &.syntax--tag.syntax--inline .syntax--name,
+  &.syntax--tag > .syntax--punctuation {
     color: @blue;
   }
 
-  &.selector.css .entity.name.tag {
+  &.syntax--selector.syntax--css .syntax--entity.syntax--name.syntax--tag {
     text-decoration: underline;
     color: #96CBFE;
   }
 
-  &.selector.css .entity.other.attribute-name.tag.pseudo-class {
+  &.syntax--selector.syntax--css .syntax--entity.syntax--other.syntax--attribute-name.syntax--tag.syntax--pseudo-class {
     color: #8F9D6A;
   }
 
-  &.selector.css .entity.other.attribute-name.id {
+  &.syntax--selector.syntax--css .syntax--entity.syntax--other.syntax--attribute-name.syntax--id {
     color: #8B98AB;
   }
 
-  &.selector.css .entity.other.attribute-name.class {
+  &.syntax--selector.syntax--css .syntax--entity.syntax--other.syntax--attribute-name.syntax--class {
     color: #62B1FE;
   }
 
-  &.property-group .support.constant.property-value.css,
-  &.property-value .support.constant.property-value.css {
+  &.property-group .syntax--support.syntax--constant.syntax--property-value.syntax--css,
+  &.syntax--property-value .syntax--support.syntax--constant.syntax--property-value.syntax--css {
     color: #F9EE98;
   }
 
-  &.preprocessor.at-rule .keyword.control.at-rule {
+  &.syntax--preprocessor.syntax--at-rule .syntax--keyword.syntax--control.syntax--at-rule {
     color: #8693A5;
   }
 
-  &.property-value .support.constant.named-color.css,
-  &.property-value .constant {
+  &.syntax--property-value .syntax--support.syntax--constant.named-color.syntax--css,
+  &.syntax--property-value .syntax--constant {
     color: #87C38A;
   }
 
-  &.constructor.argument.css {
+  &.syntax--constructor.syntax--argument.syntax--css {
     color: #8F9D6A;
   }
 
-  &.diff,
-  &.diff.header {
+  &.syntax--diff,
+  &.syntax--diff.syntax--header {
     color: #F8F8F8;
     background-color: #0E2231;
   }
 
-  &.separator {
+  &.syntax--separator {
     color: #60A633;
     background-color: #242424;
   }
 
-  &.line.entry.logfile,
-  &.line.exit.logfile {
+  &.line.syntax--entry.logfile,
+  &.line.syntax--exit.logfile {
     background-color: rgba(238, 238, 238, 0.16);
   }
 
-  &.line.error.logfile {
+  &.line.syntax--error.logfile {
     background-color: #751012;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*
-atom-text-editor, :host {
-  background-color: @syntax-background-color;
-  color: @syntax-text-color;
-
-  .invisible-character {
-    color: @syntax-invisible-character-color;
-  }
-
-  .indent-guide {
-    color: @syntax-indent-guide-color;
-  }
-
-  .wrap-guide {
-    background-color: @syntax-wrap-guide-color;
-  }
-
-  .gutter {
-    background-color: @syntax-gutter-background-color;
-  }
-  .gutter .cursor-line {
-    background-color: @syntax-gutter-background-color-selected;
-  }
-  .line-number.cursor-line-no-selection {
-    background-color: @syntax-gutter-background-color-selected;
-  }
-
-  .gutter .line-number.folded,
-  .gutter .line-number:after,
-  .fold-marker:after {
-    color: #fba0e3;
-  }
-
-  .invisible {
-    color: @syntax-text-color;
-  }
-
-  .cursor {
-    border-color: @syntax-cursor-color;
-  }
-
-  .selection .region {
-    background-color: @syntax-selection-color;
-  }
-
-  // Markdown Styles
-
-  .source.gfm {
-    color: #999;
-  }
-
-  .gfm {
-    .markup.heading {
-      color: #eee;
-    }
-
-    .link {
-      color: #555;
-    }
-
-    .variable.list,
-    .support.quote {
-      color: #555;
-    }
-
-    .link .entity {
-      color: #ddd;
-    }
-
-    .raw {
-      color: #aaa;
-    }
-  }
-
-  .markdown {
-    .paragraph {
-      color: #999;
-    }
-
-    .heading {
-      color: #eee;
-    }
-
-    .raw {
-      color: #aaa;
-    }
-
-    .link {
-      color: #555;
-
-      .string {
-        color: #555;
-
-        &.title {
-          color: #ddd;
-        }
-      }
-    }
-  }
-}
-
-
-.comment {
-  color: #7C7C7C;
-}
-
-.variable {
-    color: @blue;
-}
-
-.illegal {
-    color: @orange;
-}
-
-.invalid {
-    color: @red;
-}
-
-
-//////////////////////
-//////////////////////
-// PHP styles
-.php {
-
-    color: @beige;
-
-    .source,
-    .support {
-        //color: @salmon;
-        color: @blue;
-    }
-
-    .begin,
-    .end {
-        //&:not(.string){
-            color: @salmon;
-            font-weight: bold;
-
-            &.embedded {
-                &:extend(.php .begin);
-            }
-        //}
-
-
-    }
-
-    .punctuation,
-    .basic_functions,
-    .operator {
-        color: @blue;
-    }
-
-    .variable {
-        color: @cyan;
-    }
-
-    .type {
-        color: @blue;
-        font-weight: bold;
-    }
-
-    .construct,
-    .control,
-    .new {
-        color: @green;
-    }
-
-    .string,
-    .string-contents {
-        color: @light_red;
-    }
-
-    .constant {
-        color: @yellow;
-    }
-
-    .language {
-        color: @green;
-    }
-
-    .numeric {
-        color: @light_red;
-    }
-
-    .comment {
-        color: @gray_orange;
-    }
-
-} // END .php
-
-
-
-//////////////////////
-//////////////////////
-// CSS styles
-.css {
-
-    .property-value,
-    .at-rule {
-        color: @pink;
-    }
-
-    .entity {
-        color: @pink2;
-    }
-
-    .property-name {
-        color: @blue;
-    }
-
-    .variable {
-        color: @mint_green;
-    }
-
-    .string {
-        color: @green;
-    }
-
-    .important,
-    .numeric,
-    .unit {
-        color: @salmon;
-    }
-
-    .support {
-
-        &.property-value {
-            color: @cyan;
-        }
-    }
-
-
-    // SCSS
-    &.scss {
-
-        .unit {
-            color: @salmon;
-        }
-
-        .property-name {
-            color: @blue;
-        }
-
-        .punctuation {
-            color: @pink2;
-        }
-
-        .string {
-            color: @light_green;
-        }
-
-        .parameter {
-            color: @yellow;
-        }
-
-        .comment {
-            color: @gray;
-        }
-
-    }
-
-} //END .css
-
-
-
-
-///////////////////
-/// HTML
-.xml,
-.html {
-
-    color: @beige;
-
-    .tag {
-        color: @blue;
-    }
-
-    .attribute-name {
-        color: @gray_green;
-    }
-
-    .string,
-    .toc-list {
-        color: @cyan;
-
-        &.php {
-            color: @salmon;
-        }
-    }
-
-    .comment {
-        color: @gray_orange;
-    }
-
-}
-
-
-
-
-///////////////////
-/// JS
-.js {
-
-    .string{
-        color: @light_green;
-    }
-
-    .comment {
-        color: @gray;
-    }
-
-    .round,
-    .begin,
-    .end {
-        color: @blue;
-    }
-
-    .parameter {
-        color: @beige;
-    }
-
-    .string{
-        color: @cyan;
-    }
-
-    .class,
-    .support {
-        color: @purple;
-    }
-
-    .dom {
-        color: @light_blue;
-    }
-
-    .numeric {
-        color: @light_red;
-    }
-
-}
-
-
-
-
-
-.entity {
-  color: #FFD2A7;
-
-  &.name.type {
-    text-decoration: underline;
-    color: #FFFFB6;
-  }
-
-  &.other.inherited-class {
-    color: #9B5C2E;
-  }
-}
-*/
